--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/style.css" />¡
     <script src="js/vendor/modernizr.js"></script>
+
   </head>
   <body>
 
@@ -61,57 +63,57 @@
           </tr>
           <tr onclick="window.location='weeks/week2.html';">
             <td>2</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td>Introduction to ASP.NET and Foundation</td>
             <td>October 20, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td>This week I learned how to use ASP.NET and Reveal.js</td>
           </tr>
           <tr onclick="window.location='weeks/week3.html';">
             <td>3</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td>Making Website Dynamic and Eye Catching</td>
             <td>November 3, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td>I made the homescreen more visually appealing &amp; worked on making the Wind Tunnel automatic in Java</td>
           </tr>
           <tr onclick="window.location='weeks/week4.html';">
             <td>4</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>November 10, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
           <tr onclick="window.location='weeks/week5.html';">
             <td>5</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>November 17, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
           <tr onclick="window.location='weeks/week6.html';">
             <td>6</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>November 24, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
           <tr onclick="window.location='weeks/week7.html';">
             <td>7</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>December 1, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
           <tr onclick="window.location='weeks/week8.html';">
             <td>8</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>December 8, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
           <tr onclick="window.location='weeks/week9.html';">
             <td>9</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>December 15, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
           <tr onclick="window.location='weeks/week10.html';">
             <td>10</td>
-            <td>Introduction to Tree/Graph Traversal &amp; search</td>
+            <td></td>
             <td>December 22, 2017</td>
-            <td>Covering trees definitions, depth first search, breadth first search. Example problem solve.</td>
+            <td></td>
           </tr>
         </table>
       </div>
