--- a/weeks/week2.html
+++ b/weeks/week2.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    ¡
+
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/solarized.css" id="theme">
 
@@ -82,7 +82,9 @@
             <h1>THE END</h1>
             <p>
                 - <a href="./week1.html">Last Week</a> <br>
-                - <a href="./week3.html">Next Week</a>
+                - <a href="./week3.html">Next Week</a><br>
+
+                - <a href="..">Go to Homescreen</a>
             </p>
         </section>
 
