--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/style.css" />¡
+    <link rel="stylesheet" href="css/style.css"/>
+    <script src="js/custom.js" ></script>
     <script src="js/vendor/modernizr.js"></script>
 
   </head>
   <body>
 
-  <!-- Navigation -->
+
+
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
@@ -24,14 +26,7 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
-        <li class="active"><a href="#">About</a></li>
-        <li class="has-dropdown">
-          <a href="#">Extras</a>
-          <ul class="dropdown">
-            <li><a href="#">First link in dropdown</a></li>
-            <li class="active"><a href="#">Active link in dropdown</a></li>
-          </ul>
-        </li>
+        <li class="active"><a href="http://www.turbulenceandenergylab.org/">Turbulence</a></li>
       </ul>
 
       <!-- Left Nav Section -->
@@ -48,7 +43,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">Wind Turbine project </h1>
-        <table class="table table-striped table-hover">
+        <table class="table table-striped table-hover table-expand">
           <tr>
             <th>Week#</th>
             <th>Name</th>
