--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@
           </tr>
           <tr onclick="window.location='weeks/week4.html';">
             <td>4</td>
-            <td></td>
+            <td>Reading Student Thesis Part 1</td>
             <td>November 10, 2017</td>
-            <td></td>
+            <td>The two servomotors are of Animatics® SmartMotorTM SM2315D. The SmartMotorTM is a brushless DC servomotor that uses a built-in controller and amplifier to perform programmed motion.
+            </td>
           </tr>
           <tr onclick="window.location='weeks/week5.html';">
             <td>5</td>
-            <td></td>
+            <td>Reading Student Thesis Part 2</td>
             <td>November 17, 2017</td>
-            <td></td>
+            <td>The INSTANT program, written in C++, calculates the mean flow and turbulence velocities at a given location and displays them on the screen</td>
           </tr>
           <tr onclick="window.location='weeks/week6.html';">
             <td>6</td>
